--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>Julian Fee's Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
+		<h1>This is Julian Fee's Webpage for Art 101!</h1>
+			<p>This page was generated from Wes' File Structure Template Repo.</p>
+
+			<p>Go crazy and customize me.</p>
 	</main>
 
 
