--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 	<main>
-		<h1>This is Julian Fee's Webpage for Art 101!</h1>
-			<p>This page was generated from Wes' File Structure Template Repo.</p>
+
+			<h1>Julian Fee's Art 101 Homepage.</h1>
+			<p>This page is dedicated to Art 101 Winter 2021</p>
 
 			<p>Go crazy and customize me.</p>
+
 	</main>
 
 
