changes to lab 3, both css and html.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
 </head>
 <body>
 	<main>
-
+<div class="content">
 			<h1>Julian Fee's Art 101 Homepage.</h1>
-			<p>This page is dedicated to Art 101 Winter 2021</p>
-
-			<p>Go crazy and customize me.</p>
-
+			<p>This page is dedicated to Art 101, Winter 2021.</p>
+			<img class="centerimage" src="img/art101selfie.jpg" width="400px"</img>
+			<h2>A little bit about me:</h2>
+			<p>Hey friends, my name is Julian (she/her/hers) some call me Jules. I am a fourth year Film and Digital Media Major with a concentration in production. I am originally from Nashville, TN but I spent most o my lie in Missoula, MT. I am currently living and loving Santa Cruz! Some of my interests include photography, swimming, skiing, and making friends with every animal I come across. I look forward to continuing my HTML, CSS, and Java knowledge through the Art101 course.</p>
+			<h2>Art101 Labs:</h2>
+				<ul>
+					<li><a href="lab2/helloworld.html">Lab 2: Your First HTML</a></li>
+					<li><a href="lab3/filestructures.html">Lab 3: File Structure and File Tranfer</a></li>
+					<li><a href="lab4/">Lab 4: Pseudocoding and Problem-Solving</a></li>
+					<li><a href="lab5/">Lab 5: Data Types and Variables</a></li>
+					<li><a href="lab6/">Lab 6: Arrays and Objects</a></li>
+				</ul>
+</div>
 	</main>
 
 
