--- a/section/experiment.html
+++ b/section/experiment.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-    <img class="centerimage" src="img/grossrydy.jpeg" width="500px"</img>
+    <img class="centerimage" src="img/grossrydy.jpg" width="500px" </img>
 </body>
 </html>
