--- a/section/experiment.html
+++ b/section/experiment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="stylesheet" type="text/css" href="/css/site.css">
 	<link rel="stylesheet" type="text/css" href="../css/experiment.css">
 </head>
 <body>
