--- a/section/html/experiment.html
+++ b/section/html/experiment.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="/css/site.css">
-	<link rel="stylesheet" type="text/css" href="../css/experiment.css">
+	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<link rel="stylesheet" type="text/css" href="/css/experiment.css">
 </head>
 <body>
     <div class="content">
