--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<li><a href="lab4/">Lab 4: Pseudocoding and Problem-Solving</a></li>
 					<li><a href="lab5/">Lab 5: Data Types and Variables</a></li>
 					<li><a href="lab6/">Lab 6: Arrays and Objects</a></li>
+					<li><a href="section/experiment.html">Section 1/21: Experimental Lab</a></li>
 				</ul>
 </div>
 	</main>
