--- a/section/html/experiment.html
+++ b/section/html/experiment.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Lab X - Subject/Topic</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="/css/experiment.css">
+	<link rel="stylesheet" type="text/css" href="./css/experiment.css">
 </head>
 <body>
     <div class="content">
     <h1>Section Experiment</h1>
-    <img class="centerimage" src="img/grossrudy.jpg" width="500px" </img>
+    <img class="centerimage" src="../img/grossrudy.jpg" width="500px" </img>
     <p>This is a cursed image</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ONtx9Q8bU2E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 </body>
 </html>
