--- a/lab2/helloworld.html
+++ b/lab2/helloworld.html
@@ -10,7 +10,7 @@
 				<main>
 				<div class="content">
 				<h1 class="center">Hello World!</h1>
-					<p class="dream center">This is the Webpage for Lab2! Dream team Jules and Lu are meeting for the very irst time over zoom. It is a Saturday at 2:32, Julian just got back romtaking Merlen, a dog she is watching to the beach! Lu has been inside all day and but they will probably go outside to skate at some point (no promises). They also really want McNuggets, which is a common craving they battle daily. We found out that we both live with a stupid amount of people, 8 and 9 housemates... it's not easy!</p>
+					<p class="dream center">This is the Webpage for Lab2! Dream team Jules and Lu are meeting for the very irst time over zoom. It is a Saturday at 2:32, Julian just got back from taking Merlen, a dog she is watching, to the beach! Lu has been inside all day and but they will probably go outside to skate at some point (no promises). They also really want McNuggets, which is a common craving they battle daily. We found out that we both live with a stupid amount of people, 8 and 9 housemates... it's not easy!</p>
 					<p class="dream center">Jules is in a new class Art 80t where she is learning all about photoshop!</p>
 				<h2 class = "center">Please enjoy this photo Jules just made of her old dog Chops!</h2>
 					<img class="centerimage" src="img/graphicchop.jpg" width="500px">
