--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				<ul>
 					<li><a href="lab2/helloworld.html">Lab 2: Your First HTML</a></li>
 					<li><a href="lab3/filestructures.html">Lab 3: File Structure and File Tranfer</a></li>
-					<li><a href="lab4/">Lab 4: Pseudocoding and Problem-Solving</a></li>
-					<li><a href="lab5/">Lab 5: Data Types and Variables</a></li>
+					<li><a href="lab4/pseudocode.html">Lab 4: Pseudocoding and Problem-Solving</a></li>
+					<li><a href="lab5/lab5.html">Lab 5: Data Types and Variables</a></li>
 					<li><a href="lab6/">Lab 6: Arrays and Objects</a></li>
 					<li><a href="section/experiment.html">Section 1/21: Experimental Lab</a></li>
 				</ul>
