--- a/lab4/dinogame.html
+++ b/lab4/dinogame.html
@@ -1,3 +1,5 @@
+//Html code for the Chrome Dino game
+	//Does not work yet
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -8,6 +10,6 @@
     </head>
     <body>
         <div class="background"></div>
-        <div class="dinito"></div>
+        <div id="dinito" class="dinito"></div>
     </body>
 </html>
