--- a/lab3/filestructures.html
+++ b/lab3/filestructures.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Lab 3: File Structures</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link rel="stylesheet" type="text/css" href="../css/lab.css">
 </head>
 <body>
 <div class="content">
