--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<li><a href="lab3/filestructures.html">Lab 3: File Structure and File Tranfer</a></li>
 					<li><a href="lab4/pseudocode.html">Lab 4: Pseudocoding and Problem-Solving</a></li>
 					<li><a href="lab5/lab5.html">Lab 5: Data Types and Variables</a></li>
-					<li><a href="lab6/">Lab 6: Arrays and Objects</a></li>
+					<li><a href="lab6/lab6.html">Lab 6: Arrays and Objects</a></li>
 					<li><a href="section/experiment.html">Section 1/21: Experimental Lab</a></li>
 				</ul>
 </div>
