--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -14,11 +14,8 @@
     <h2>Problems</h2>
       <p>My Slack app has given me several issues and I did not get the notification that my group was meeting today for the lab. Due to this, I am doing it on my own.</p>
     <h2>Results</h2>
-      <p>Once I caught my errors, the code did not show any error within the console.</p>
+      <p>Once I caught my errors in Atom, the code did not show any error within the console. Go check it out!</p>
 
-
-
-    <script src="js/lab8.js"></script>
       </div>
 
 </body>
