--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="grad">
-    <h1>Lab 7: Functions</h1>
+    <h1>Lab 8: Anon Functions and Callbacks</h1>
     <h2>Challenge</h2>
       <p>I had several uncaught syntax errors within the frst run of my code on the console. I had a mispelling within the "thirdThing" function which caused several issues. </p>
     <h2>Problems</h2>
