--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 					<li><a href="lab10/lab10.html">Lab 10: Javascipt Events and Forms</a></li>
 					<li><a href="lab11/lab11.html">Lab 11: Libraries & jQuery</a></li>
 					<li><a href="lab12/lab12.html">Lab 12: Conditionals</a></li>
+					<li><a href="lab13/lab13.html">Lab 13: Loops</a></li>
 					<li><a href="section/experiment.html">Section 1/21: Experimental Lab</a></li>
 				</ul>
 </div>
