--- a/Team Project/index.html
+++ b/Team Project/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="js/jquery.timelinr-0.9.7.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title></title>
   </head>
   <body>
-
+<div id="box">
     <nav>
       <ul>
         <li class="buzzWord" id="snowflake"><a href="snowflake/snowflake.html">Snowflake</a></li>
@@ -17,6 +18,6 @@
         <li class="buzzWord" id="rigged"><a href="rigged/rigged.html">Rigged</a></li>
       </ul>
     </nav>
-
+</div>
   </body>
 </html>
