--- a/lab14/lab14.html
+++ b/lab14/lab14.html
@@ -7,7 +7,7 @@
     <title>Lab 14: Debugging</title>
   </head>
   <body>
-    <div id="content">
+    <div class="content">
       <h1>Lab 14:Debugging</h1>
       <div id="dream">
         <h2>Challenges:</h2>
