--- a/teamproject/snowflake/snowflake.html
+++ b/teamproject/snowflake/snowflake.html
@@ -31,7 +31,7 @@
 
 
   <div>
-    <img src="img/bee.png" width = 100px id = 'homeButton1'></img>
+    <img src="img/bee2.png" width = 100px id = 'homeButton1'></img>
     <script type="text/javascript">
       document.getElementById("homeButton1").onclick = function() {
         location.href = "../index.html";
